--- a/Details/book.html
+++ b/Details/book.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Tên Sách</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../Styles/header.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="../Styles/Book-styles/book.css">
-        <link rel="stylesheet" href="../Styles/Book-styles/rating-modal.css">
-        <script src="../Scripts/book-detail.js" type="module" defer></script>
-        <script src="../Scripts/search-bar.js" type="module" defer></script>
-    </head>
-    <body style="padding-top: 43px; margin:0 0;">
-        <header class="site-header">
-            <a href="../Explore-Page.html" class="logo"><span>LISTEN</span>ARY</a>
 
-            <div class="search-container">
-                <i class="fa-solid fa-magnifying-glass search-icon"></i>
-                <input type="text" class="search-input" placeholder="Search">
-            </div>
+<head>
+    <title>Tên Sách</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Styles/header.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../Styles/Book-styles/book.css">
+    <link rel="stylesheet" href="../Styles/Book-styles/rating-modal.css">
+    <script src="../Scripts/book-detail.js" type="module" defer></script>
+    <script src="../Scripts/search-bar.js" type="module" defer></script>
+</head>
 
-            <nav class="navigation">
-                <a href="../Explore-Page.html">KHÁM PHÁ</a>
-                <a href="../Author-Page.html">TÁC GIẢ</a>
-                <a href="../Genres-Page.html">THỂ LOẠI</a>
-                <a href="../User-Page.html" class="profile-icon">
-                    <i class="fa-solid fa-user"></i>
-                </a>
-            </nav>            
-        </header>
-        <main>
-            <section class="introduction-banner">
+<body style="padding-top: 43px; margin:0 0;">
+    <header class="site-header">
+        <a href="../Explore-Page.html" class="logo"><span>LISTEN</span>ARY</a>
+
+        <div class="search-container">
+            <i class="fa-solid fa-magnifying-glass search-icon"></i>
+            <input type="text" class="search-input" placeholder="Search">
+        </div>
+
+        <nav class="navigation">
+            <a href="../Explore-Page.html">KHÁM PHÁ</a>
+            <a href="../Author-Page.html">TÁC GIẢ</a>
+            <a href="../Genres-Page.html">THỂ LOẠI</a>
+            <a href="../User-Page.html" class="profile-icon">
+                <i class="fa-solid fa-user"></i>
+            </a>
+        </nav>
+    </header>
+    <main>
+        <section class="introduction-banner">
             <div class="book-cover">
                 <img src="../Images/Book-Covers/b9.png">
             </div>
@@ -48,91 +52,99 @@
             <div class="function-buttons">
                 <button>Phát ngay</button>
                 <button>Yêu thích</button>
+                <button class="quiz-btn">Quiz</button>
             </div>
         </section>
-            <section class="about-the-author">
-                <p class="about-the-author-title"> Mô Tả:</p>
-                <div class="about-the-author-content ">
+        <section class="about-the-author">
+            <p class="about-the-author-title"> Mô Tả:</p>
+            <div class="about-the-author-content ">
+            </div>
+        </section>
+        <section class="related-infor">
+            <p class="related-infor-title">Từ Tác Giả:</p>
+            <div class="related-infor-content">
+            </div>
+        </section>
+        <section class="related-infor">
+            <p class="related-infor-title">Thông Tin Liên Quan:</p>
+            <div class="related-infor-content">
+            </div>
+        </section>
+        <section class="rating-container">
+            <div class="rating-title">Đánh Giá</div>
+            <div class="rating-star">★★★★★ - 5.0</div>
+            <div class="rating-command">
+                <div class="filter-select-wrapper">
+                    <select class="filter-select">
+                        <option value="all" selected>Tất cả</option>
+                        <option value="option1">★★★★★ (5 sao)</option>
+                        <option value="option2">★★★★ (4 sao)</option>
+                        <option value="option3">★★★ (3 sao)</option>
+                        <option value="option4">★★ (2 sao)</option>
+                        <option value="option5">★ (1 sao)</option>
+                    </select>
                 </div>
-            </section>
-            <section class="related-infor">
-                <p class="related-infor-title">Từ Tác Giả:</p>
-                <div class="related-infor-content">
-                </div>
-            </section>
-            <section class="related-infor">
-                <p class="related-infor-title">Thông Tin Liên Quan:</p>
-                <div class="related-infor-content">
-                </div>
-            </section>
-            <section class="rating-container">
-                        <div class="rating-title">Đánh Giá</div>
-                        <div class="rating-star">★★★★★ - 5.0</div>
-                        <div class="rating-command">
-                            <div class="filter-select-wrapper">
-                                <select class="filter-select">
-                                    <option value="all" selected>Tất cả</option> 
-                                    <option value="option1">★★★★★ (5 sao)</option>
-                                    <option value="option2">★★★★ (4 sao)</option>
-                                    <option value="option3">★★★ (3 sao)</option>
-                                    <option value="option4">★★ (2 sao)</option>
-                                    <option value="option5">★ (1 sao)</option>
-                                </select>
-                            </div>
-                        <button class="plus-btn"></button>
-                        </div>
-                        
-                        <div class="rating">
-                            <div class="line"></div>
-                            <div class="rating-card">
-                                <div class="main-inf">
-                                    <div class="name">Name</div>
-                                    <div class="date">Date</div>
-                                    <div class="star">★★★★★</div>
-                                </div>
-                                <div class="comment">
-                                    <div class="comment-title">Title</div>
-                                    <div class="content">"Một tuyệt tác! Câu chuyện tình yêu của Heathcliff và Catherine quá mãnh liệt, hoang dại và ám ảnh. Đọc xong mà day dứt mãi."</div>
-                                </div>
-                            </div>
-                            <div class="rating-card">
-                                <div class="main-inf">
-                                    <div class="name">Name</div>
-                                    <div class="date">Date</div>
-                                    <div class="star">★★★★★</div>
-                                </div>
-                                <div class="comment">
-                                    <div class="comment-title">Title</div>
-                                    <div class="content">"Một tuyệt tác! Câu chuyện tình yêu của Heathcliff và Catherine quá mãnh liệt, hoang dại và ám ảnh. Đọc xong mà day dứt mãi."</div>
-                                </div>
-                            </div><div class="rating-card">
-                                <div class="main-inf">
-                                    <div class="name">Name</div>
-                                    <div class="date">Date</div>
-                                    <div class="star">★★★★★</div>
-                                </div>
-                                <div class="comment">
-                                    <div class="comment-title">Title</div>
-                                    <div class="content">"Một tuyệt tác! Câu chuyện tình yêu của Heathcliff và Catherine quá mãnh liệt, hoang dại và ám ảnh. Đọc xong mà day dứt mãi."</div>
-                                </div>
-                            </div><div class="rating-card">
-                                <div class="main-inf">
-                                    <div class="name">Name</div>
-                                    <div class="date">Date</div>
-                                    <div class="star">★★★★★</div>
-                                </div>
-                                <div class="comment">
-                                    <div class="comment-title">Title</div>
-                                    <div class="content">"Một tuyệt tác! Câu chuyện tình yêu của Heathcliff và Catherine quá mãnh liệt, hoang dại và ám ảnh. Đọc xong mà day dứt mãi."</div>
-                                </div>
-                            </div>
-                            <div class="line"></div>
-                            <div class="all-ratings">Tất cả</div>
-                        </div>
-                    </section>
+                <button class="plus-btn"></button>
+            </div>
 
-        </main>
-        <!-- <script type="module" src="../Scripts/checkLogin.js"></script> -->
-         <script type="module" src="../Scripts/book-ai.js"></script>
-    </body>
+            <div class="rating">
+                <div class="line"></div>
+                <div class="rating-card">
+                    <div class="main-inf">
+                        <div class="name">Name</div>
+                        <div class="date">Date</div>
+                        <div class="star">★★★★★</div>
+                    </div>
+                    <div class="comment">
+                        <div class="comment-title">Title</div>
+                        <div class="content">"Một tuyệt tác! Câu chuyện tình yêu của Heathcliff và Catherine quá mãnh
+                            liệt, hoang dại và ám ảnh. Đọc xong mà day dứt mãi."</div>
+                    </div>
+                </div>
+                <div class="rating-card">
+                    <div class="main-inf">
+                        <div class="name">Name</div>
+                        <div class="date">Date</div>
+                        <div class="star">★★★★★</div>
+                    </div>
+                    <div class="comment">
+                        <div class="comment-title">Title</div>
+                        <div class="content">"Một tuyệt tác! Câu chuyện tình yêu của Heathcliff và Catherine quá mãnh
+                            liệt, hoang dại và ám ảnh. Đọc xong mà day dứt mãi."</div>
+                    </div>
+                </div>
+                <div class="rating-card">
+                    <div class="main-inf">
+                        <div class="name">Name</div>
+                        <div class="date">Date</div>
+                        <div class="star">★★★★★</div>
+                    </div>
+                    <div class="comment">
+                        <div class="comment-title">Title</div>
+                        <div class="content">"Một tuyệt tác! Câu chuyện tình yêu của Heathcliff và Catherine quá mãnh
+                            liệt, hoang dại và ám ảnh. Đọc xong mà day dứt mãi."</div>
+                    </div>
+                </div>
+                <div class="rating-card">
+                    <div class="main-inf">
+                        <div class="name">Name</div>
+                        <div class="date">Date</div>
+                        <div class="star">★★★★★</div>
+                    </div>
+                    <div class="comment">
+                        <div class="comment-title">Title</div>
+                        <div class="content">"Một tuyệt tác! Câu chuyện tình yêu của Heathcliff và Catherine quá mãnh
+                            liệt, hoang dại và ám ảnh. Đọc xong mà day dứt mãi."</div>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="all-ratings">Tất cả</div>
+            </div>
+        </section>
+
+    </main>
+    <!-- <script type="module" src="../Scripts/checkLogin.js"></script> -->
+    <script type="module" src="../Scripts/book-ai.js"></script>
+</body>
+
 </html>
