--- a/User-Page.html
+++ b/User-Page.html
@@ -44,6 +44,7 @@
                                 <div class="setting-command">Đổi mật khẩu</div>
                             </div>
                             <div>
+                                <div class="setting-command sui-account">Tài khoản SUI</div>
                                 <div class="setting-command delete-history">Xóa lịch sử</div>
                                 <div class="setting-command delete-account">Xóa tài khoản</div>
                             </div>
